--- a/src/main/resources/templates/admin/Notifications.html
+++ b/src/main/resources/templates/admin/Notifications.html
@@ -46,8 +46,8 @@
                     var notificationHtml = notifications.map(function(notification) {
                         var bgColor = notification.isRead ? 'bg-gray-200' : 'bg-blue-100';
                         return `<div id="${notification.notificationId}" class="${bgColor} rounded overflow-hidden shadow-lg m-4 p-4">
-                                    <p class="${notification.isRead ? 'text-gray-600' : 'text-black'}"> Product with id ${notification.productId} has zero quantity</p>
-                                    <button onclick="markAsRead('${notification.notificationId}')" class="mt-4 inline-flex items-center justify-center rounded-md border border-transparent bg-blue-500 px-4 py-2 text-sm font-medium text-white shadow-sm hover:bg-blue-600 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2">
+                                    <p class="${notification.isRead ? 'text-gray-600' : 'text-black'}"> Product with id ${notification.product.productName} has zero quantity</p>
+                                    <button onclick="markAsRead('${notification.notificationId}', '${notification.product.productId}','${notification.product.productName}','${notification.product.productDescription}','${notification.product.productPrice}','${notification.product.productDiscount}','${notification.product.productQuantity}','${notification.product.productAddedDate}','${notification.product.productImage}')" class="mt-4 inline-flex items-center justify-center rounded-md border border-transparent bg-blue-500 px-4 py-2 text-sm font-medium text-white shadow-sm hover:bg-blue-600 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2">
                                         <svg class="w-5 h-5 mr-2 -ml-1" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 12a3 3 0 11-6 0 3 3 0 016 0zm-4-2v8m-4 4V4m8 16v-8"></path></svg>
                                         Mark as Read
                                     </button>
@@ -62,7 +62,22 @@
         });
     }
 
-    function markAsRead(notificationId) {
+    function markAsRead(notificationId, productId, productName, productDescription, productPrice, productDiscount, productQuantity, productAddedDate, productImage) {
+        const requestBody = {
+            "notificationId": notificationId,
+            "product": {
+                "productId": productId,
+                "productName": productName,
+                "productDescription": productDescription,
+                "productPrice": productPrice,
+                "productDiscount": productDiscount,
+                "productQuantity": productQuantity,
+                "productAddedDate": productAddedDate,
+                "productImage": productImage
+            },
+            "isRead": true
+        };
+        console.log(requestBody);
         $.ajax({
             url: baseUrl + '/updateNotification/' + notificationId,
             type: 'PUT',
@@ -70,7 +85,7 @@
                 'Authorization': 'Bearer ' + token
             },
             contentType: 'application/json',
-            data: JSON.stringify({ isRead: true }),
+            data: JSON.stringify(requestBody),
             success: function () {
                 $('#' + notificationId).removeClass('bg-blue-100').addClass('bg-gray-200');
             },
@@ -79,6 +94,7 @@
             }
         });
     }
+
 
     $(document).ready(function() {
         fetchNotifications();
