--- a/src/main/resources/templates/admin/Header.html
+++ b/src/main/resources/templates/admin/Header.html
@@ -11,10 +11,14 @@
             <nav>
                 <a href="/" class="text-white px-3 py-2 rounded hover:bg-gray-700 hover:text-white">Home</a>
                 <a href="/about" class="text-white px-3 py-2 rounded hover:bg-gray-700 hover:text-white">About</a>
-                <a href="/contact" class="text-white px-3 py-2 rounded hover:bg-gray-700 hover:text-white">Contact</a>
+                <button id="logoutButton">Logout</button>
+                <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+                <script th:src="@{/js/logout.js}"></script>
+                <!-- More content -->
             </nav>
         </div>
     </header>
 </div>
+
 </body>
 </html>
