--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,29 +1,66 @@
-<!-- src/main/resources/templates/login.html -->
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Login</title>
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"rel="stylesheet" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERd`knLPMO" crossorigin="anonymous">
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+
+    <style>
+        @keyframes blinker {
+            50% { opacity: 0; }
+        }
+        .blinking-text {
+            font-size: 48px;
+            font-weight: bold;
+            animation: blinker 1s linear infinite;
+            color: #007bff;
+        }
+        body {
+            background-color: #343a40;
+            color: #fff;
+            height: 100vh;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+        .container {
+            width: 100%;
+            max-width: 400px;
+            padding: 20px;
+            background-color: #424242;
+            border-radius: 8px;
+            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+        }
+        .form-group {
+            margin-bottom: 15px;
+        }
+        .btn-group {
+            display: flex;
+            justify-content: space-between; /* Space between login and register button */
+        }
+    </style>
 </head>
 <body>
 <div class="container">
-    <h3>Login</h3>
+    <h1 class="blinking-text text-center">Youkoso Store</h1>
+    <h3 class="text-center">Login</h3>
 
     <form id="loginForm" action="#" th:action="@{/login}" method="post">
         <div class="form-group">
             <label for="username">Username:</label>
-            <input type="text" id="username" name="username" required />
+            <input type="text" id="username" name="username" class="form-control" required />
         </div>
         <div class="form-group">
             <label for="password">Password:</label>
-            <input type="password" id="password" name="password" required />
+            <input type="password" id="password" name="password" class="form-control" required />
         </div>
-        <div>
+        <div class="btn-group">
             <button type="submit" class="btn btn-primary">Login</button>
+            <button type="button" id="registerButton" class="btn btn-secondary">Register</button>
         </div>
     </form>
-<div id="loginError" style="color: red;"></div>
+    <div id="loginError" style="color: red;"></div>
 </div>
 <script th:src="@{/js/login.js}"></script>
+<script th:src="@{/js/register.js}"></script>
 </body>
 </html>
