--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -1,53 +1,102 @@
-<!-- src/main/resources/templates/login.html -->
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Sign Up</title>
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"rel="stylesheet" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERd`knLPMO" crossorigin="anonymous">
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+
+    <!-- Styles for consistency with the login page -->
+    <style>
+        body {
+            background-color: #343a40; /* Dark background */
+            color: #fff; /* Light text for dark background */
+            height: 120vh;
+            display: flex;
+            align-items: center; /* Vertical center alignment */
+            justify-content: center; /* Horizontal center alignment */
+        }
+        .container {
+            width: 100%;
+            max-width: 400px;
+            padding: 20px;
+            background-color: #424242; /* Slightly lighter background for the form */
+            border-radius: 8px;
+            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+        }
+        .form-group {
+            margin-bottom: 15px;
+        }
+        input[type='text'], input[type='email'], input[type='password'], input[type='datetime-local'], input[type='checkbox'] {
+            width: 100%;
+            padding: 8px;
+            margin-top: 5px;
+            box-sizing: border-box;
+            border-radius: 4px;
+            background-color: #333;
+            color: #fff;
+            border: 1px solid #777;
+        }
+        label {
+            margin-bottom: 0.5rem;
+        }
+        fieldset {
+            border: 1px solid #777;
+            padding: 10px;
+        }
+        legend {
+            color: #fff;
+            padding: 0 10px;
+        }
+        button {
+            width: 100%;
+            padding: 10px;
+        }
+    </style>
 </head>
 <body>
 <div class="container">
-<h2>Signup Form</h2>
-<form id="signupForm">
-    <div class="form-group">
-        <label for="username">Username:</label>
-        <input type="text" id="username" name="username" required minlength="3" maxlength="20"><br><br>
-    </div>
-
-    <div class="form-group">
-        <label for="email">Email:</label>
-        <input type="email" id="email" name="email" required maxlength="50"><br><br>
-    </div>
-    <div class="form-group">
-        <label for="password">Password:</label>
-        <input type="password" id="password" name="password" required minlength="6" maxlength="40"><br><br>
-    </div>
-    <div class="form-group">
-        <label for="firstName">First Name:</label>
-        <input type="text" id="firstName" name="firstName" required maxlength="50"><br><br>
-    </div>
-    <div class="form-group">
-        <label for="lastName">Last Name:</label>
-        <input type="text" id="lastName" name="lastName" required maxlength="50"><br><br>
-    </div>
-    <div class="form-group">
-        <label for="dob">Date of Birth (yyyy-mm-dd HH:mm:ss):</label>
-        <input type="datetime-local" id="dob" name="dob" required><br><br>
-    </div>
-    <div class="form-group">
-        <fieldset>
-            <legend>Select Role(s):</legend>
-            <input type="checkbox" id="admin" name="role" value="ROLE_ADMIN">
-            <label for="admin">Admin</label><br>
-            <input type="checkbox" id="user" name="role" value="ROLE_CUSTOMER">
-            <label for="user">Customer</label><br>
-        </fieldset><br>
-    </div>
-    <button type="submit" class="btn btn-primary">Submit</button>
-</form>
+    <h2 class="text-center">Signup Form</h2>
+    <form id="signupForm" action="#" th:action="@{/signup}" method="post">
+        <div class="form-group">
+            <label for="username">Username:</label>
+            <input type="text" id="username" name="username" class="form-control" required minlength="3" maxlength="20">
+        </div>
+        <div class="form-group">
+            <label for="email">Email:</label>
+            <input type="email" id="email" name="email" class="form-control" required maxlength="50">
+        </div>
+        <div class="form-group">
+            <label for="password">Password:</label>
+            <input type="password" id="password" name="password" class="form-control" required minlength="6" maxlength="40">
+        </div>
+        <div class="form-group">
+            <label for="firstName">First Name:</label>
+            <input type="text" id="firstName" name="firstName" class="form-control" required maxlength="50">
+        </div>
+        <div class="form-group">
+            <label for="lastName">Last Name:</label>
+            <input type="text" id="lastName" name="lastName" class="form-control" required maxlength="50">
+        </div>
+        <div class="form-group">
+            <label for="dob">Date of Birth:</label>
+            <input type="datetime-local" id="dob" name="dob" class="form-control" required>
+        </div>
+        <div class="form-group">
+            <fieldset>
+                <legend>Select Role(s):</legend>
+                <div>
+                    <input type="checkbox" id="admin" name="role" value="ROLE_ADMIN">
+                    <label for="admin">Admin</label>
+                </div>
+                <div>
+                    <input type="checkbox" id="user" name="role" value="ROLE_CUSTOMER">
+                    <label for="user">Customer</label>
+                </div>
+            </fieldset>
+        </div>
+        <button type="submit" class="btn btn-primary">Submit</button>
+    </form>
 </div>
 <div id="signupError" style="color: red;"></div>
-
 <script th:src="@{/js/signup.js}"></script>
 </body>
 </html>
