--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -7,11 +7,12 @@
     <!-- Styles for consistency with the login page -->
     <style>
         body {
+            padding-top: 100px;
             background-color: #343a40; /* Dark background */
             color: #fff; /* Light text for dark background */
-            height: 120vh;
+            height: 100vh;
             display: flex;
-            align-items: center; /* Vertical center alignment */
+            align-items: start; /* Vertical center alignment */
             justify-content: center; /* Horizontal center alignment */
         }
         .container {
