--- a/src/main/resources/templates/admin/ProductDetails.html
+++ b/src/main/resources/templates/admin/ProductDetails.html
@@ -48,46 +48,51 @@
                 const formattedDate = new Date(product.productAddedDate).toLocaleDateString('en-US', {
                     year: 'numeric', month: 'long', day: 'numeric', hour: '2-digit', minute: '2-digit'
                 });
+                var randomColor = Math.floor(Math.random()*16777215).toString(16); // Generate random color
                 $('#productDetail').html(`
-                        <div class="p-6">
-                            <div class="flex items-center space-x-4">
-                                <img class="w-40 h-40 object-cover" src="${product.productImage}" alt="${product.productName}">
-                                <div class="flex-1">
-                                    <h2 class="text-xl font-bold">${product.productName}</h2>
-                                    <p class="text-gray-500">${product.productDescription}</p>
-                                </div>
-                            </div>
-                            <div class="mt-4">
-                                <h3 class="text-lg font-semibold">Details</h3>
-                                <p>Price: $${product.productPrice.toFixed(2)}</p>
-                                <p>Discount: ${product.productDiscount}%</p>
-                                <p>Quantity Available: ${product.productQuantity}</p>
-                                <p>Added on: ${formattedDate}</p>
-                                <button onclick="redirectToEditProduct('${productId}')" class="bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded m-2">Edit</button>
-                                <button onclick="deleteProduct('${productId}')" class="bg-red-500 hover:bg-red-700 text-white font-bold py-2 px-4 rounded m-2">Delete</button>
+                    <div class="p-6">
+                        <div class="flex items-center space-x-4">
+                            <div class="w-40 h-40" style="background-color: #${randomColor};"></div>
+                            <div class="flex-1">
+                                <h2 class="text-xl font-bold">${product.productName}</h2>
+                                <p class="text-gray-500">${product.productDescription}</p>
                             </div>
                         </div>
-                    `);
-            },
+                        <div class="mt-4">
+                            <h3 class="text-lg font-semibold">Details</h3>
+                            <p>Price: $${product.productPrice.toFixed(2)}</p>
+                            <p>Discount: ${product.productDiscount}%</p>
+                            <p>Quantity Available: ${product.productQuantity}</p>
+                            <p>Added on: ${formattedDate}</p>
+                            <button onclick="redirectToEditProduct('${productId}')" class="bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded m-2">Edit</button>
+                            <button onclick="deleteProduct('${productId}')" class="bg-red-500 hover:bg-red-700 text-white font-bold py-2 px-4 rounded m-2">Delete</button>
+                        </div>
+                    </div>
+                `);
+                    },
+
             error: function() {
                 $('#productDetail').html('<p class="text-center text-red-500">Product not found.</p>');
             }
         });
     }
-
+    function redirectToEditProduct(productId){
+        var detailUrl = `/editProduct/${productId}`;
+        window.location.href= detailUrl;
+    }
     function deleteProduct(productId) {
         if (confirm('Are you sure you want to delete this product?')) {
             $.ajax({
-                url: `http://localhost:8080/product/admin/deleteProduct/${productId}`,
+                url: `http://34.126.65.178/product/admin/deleteProduct/${productId}`,
                 type: 'DELETE',
                 headers: {
                     'Authorization': 'Bearer ' + token
                 },
-                success: function() {
+                success: function(response) {
                     alert('Product deleted successfully!');
                     window.location.href = '/products'; // Redirect to product list
                 },
-                error: function(xhr, status, error) {
+                error: function(xhr) {
                     alert('Failed to delete product. Error: ' + xhr.responseText);
                 }
             });
