feat: implement authentication

--- a/src/main/resources/templates/voucher/createVoucher.html
+++ b/src/main/resources/templates/voucher/createVoucher.html
@@ -63,6 +63,25 @@
 <script th:inline="javascript">
     const endpointUrl = 'http://34.124.139.225';
 
+    function getCookie(cname) {
+        let name = cname + "=";
+        let decodedCookie = decodeURIComponent(document.cookie);
+        let ca = decodedCookie.split(';');
+        for(let i = 0; i <ca.length; i++) {
+            let c = ca[i];
+            while (c.charAt(0) == ' ') {
+                c = c.substring(1);
+            }
+            if (c.indexOf(name) == 0) {
+                return c.substring(name.length, c.length);
+            }
+        }
+        return "";
+    }
+
+    const authorization = getCookie("bearer")
+    console.log(getCookie("bearer"))
+
     function generateUUID() {
         return ([1e7]+-1e3+-4e3+-8e3+-1e11).replace(/[018]/g, c =>
             (c ^ crypto.getRandomValues(new Uint8Array(1))[0] & 15 >> c / 4).toString(16)
@@ -91,7 +110,10 @@
         }
 
         $.ajax({
-            url: endpointUrl + '/voucher-api/create',
+            url: endpointUrl + '/voucher-api/admin/create',
+            headers: {
+                "Authorization":"Bearer " + authorization,
+            },
             type: 'POST',
             contentType: 'application/json',
             data: JSON.stringify(voucherData),
@@ -108,7 +130,6 @@
     $(document).ready(function() {
         $('#voucherType').change(function() {
             var selectedType = $(this).val();
-
 
             if (selectedType === 'Expired Date and Usage Limit') {
                 $('#dateFields').removeClass('hidden');
