--- a/src/main/resources/templates/voucher/voucherDashboard.html
+++ b/src/main/resources/templates/voucher/voucherDashboard.html
@@ -32,9 +32,31 @@
             $('#responseMessage').html('<p class="text-green-600">' + message + '</p>');
         }
 
+        function getCookie(cname) {
+            let name = cname + "=";
+            let decodedCookie = decodeURIComponent(document.cookie);
+            let ca = decodedCookie.split(';');
+            for(let i = 0; i <ca.length; i++) {
+                let c = ca[i];
+                while (c.charAt(0) == ' ') {
+                    c = c.substring(1);
+                }
+                if (c.indexOf(name) == 0) {
+                    return c.substring(name.length, c.length);
+                }
+            }
+            return "";
+        }
+
+        const authorization = getCookie("bearer")
+
         $(document).ready(function() {
+
             $.ajax({
-                url: endpointUrl + '/voucher-api/list',
+                url: endpointUrl + '/voucher-api/public/list',
+                headers: {
+                    "Authorization":"Bearer " + authorization,
+                },
                 method: 'GET',
                 dataType: 'json',
                 success: function(data) {
@@ -69,7 +91,10 @@
 
         function fetchVoucherDetails(voucherId) {
             $.ajax({
-                url: endpointUrl + '/voucher-api/get/' + voucherId,
+                url: endpointUrl + '/voucher-api/public/get/' + voucherId,
+                headers: {
+                    "Authorization":"Bearer " + authorization,
+                },
                 method: 'GET',
                 success: function(voucher) {
 
@@ -141,7 +166,10 @@
         function deleteVoucher(event, voucherId) {
             event.stopPropagation();
             $.ajax({
-                url: endpointUrl + '/voucher-api/delete/' + voucherId,
+                url: endpointUrl + '/voucher-api/admin/delete/' + voucherId,
+                headers: {
+                    "Authorization":"Bearer " + authorization,
+                },
                 method: 'DELETE',
                 success: function () {
                     $('#voucher-' + voucherId).remove();
