--- a/src/main/resources/templates/voucher/editVoucher.html
+++ b/src/main/resources/templates/voucher/editVoucher.html
@@ -35,18 +35,18 @@
         <div id="dateFields" class="hidden">
             <div>
                 <label for="voucherStartDate" class="block text-sm font-medium text-gray-700">Voucher Start Date:</label>
-                <input type="datetime-local" id="voucherStartDate" name="voucherStartDate" class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:ring-indigo-500 focus:border-indigo-500" required>
+                <input type="datetime-local" id="voucherStartDate" name="voucherStartDate" class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:ring-indigo-500 focus:border-indigo-500">
             </div>
 
             <div>
                 <label for="voucherEndDate" class="block text-sm font-medium text-gray-700">Voucher End Date:</label>
-                <input type="datetime-local" id="voucherEndDate" name="voucherEndDate" class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:ring-indigo-500 focus:border-indigo-500" required>
+                <input type="datetime-local" id="voucherEndDate" name="voucherEndDate" class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:ring-indigo-500 focus:border-indigo-500">
             </div>
         </div>
 
         <div id="limitFields" class="hidden">
             <label for="voucherUsageLimit" class="block text-sm font-medium text-gray-700">Voucher Usage Limit:</label>
-            <input type="number" id="voucherUsageLimit" name="voucherUsageLimit" min="1" class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:ring-indigo-500 focus:border-indigo-500" required>
+            <input type="number" id="voucherUsageLimit" name="voucherUsageLimit" min="1" class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:ring-indigo-500 focus:border-indigo-500">
         </div>
 
         <div class="text-center">
@@ -63,9 +63,30 @@
     const urlParams = new URLSearchParams(window.location.search);
     const voucherId = urlParams.get('id');
 
+    function getCookie(cname) {
+        let name = cname + "=";
+        let decodedCookie = decodeURIComponent(document.cookie);
+        let ca = decodedCookie.split(';');
+        for(let i = 0; i <ca.length; i++) {
+            let c = ca[i];
+            while (c.charAt(0) == ' ') {
+                c = c.substring(1);
+            }
+            if (c.indexOf(name) == 0) {
+                return c.substring(name.length, c.length);
+            }
+        }
+        return "";
+    }
+
+    const authorization = getCookie("bearer")
+
     $(document).ready(function() {
         $.ajax({
-            url: endpointUrl + '/voucher-api/get/' + voucherId,
+            url: endpointUrl + '/voucher-api/public/get/' + voucherId,
+            headers: {
+                "Authorization":"Bearer " + authorization,
+            },
             method: 'GET',
             success: function(voucher) {
                 $('#voucherId').val(voucher.voucherId);
@@ -80,11 +101,18 @@
                     $('#voucherStartDate').val(voucher.voucherStartDate.slice(0, 16));
                     $('#voucherEndDate').val(voucher.voucherEndDate.slice(0, 16));
                     $('#dateFields').removeClass('hidden');
+
+                    // Disable required props for the hidden input
+                    $('#voucherUsageLimit').prop('required', false).val($(this)[0].defaultValue);
                 }
 
                 if (voucher.voucherType === "Usage Limit" || voucher.voucherType === "Expired Date and Usage Limit") {
                     $('#voucherUsageLimit').val(voucher.voucherUsageLimit);
                     $('#limitFields').removeClass('hidden');
+
+                    // Disable required props for the hidden input
+                    $('#voucherStartDate').prop('required', false).val("");
+                    $('#voucherEndDate').prop('required', false).val("");
                 }
             },
             error: function() {
@@ -114,7 +142,10 @@
         }
 
         $.ajax({
-            url: endpointUrl + '/voucher-api/edit/' + voucherId,
+            url: endpointUrl + '/voucher-api/admin/edit/' + voucherId,
+            headers: {
+                "Authorization":"Bearer " + authorization,
+            },
             type: 'PUT',
             contentType: 'application/json',
             data: JSON.stringify(voucherData),
