--- a/src/main/resources/templates/request/EditRequest.html
+++ b/src/main/resources/templates/request/EditRequest.html
@@ -7,7 +7,8 @@
         const endpointUrl = 'http://34.101.35.243';
 
         const urlParams = new URLSearchParams(window.location.search);
-        const requestId = urlParams.get('requestId');
+        const requestId = /*[[${requestId}]]*/ '';
+        console.log('Edit page loaded for request ID:', requestId);
 
         $(document).ready(function() {
             $.ajax({
