--- a/src/main/resources/templates/voucher/createVoucher.html
+++ b/src/main/resources/templates/voucher/createVoucher.html
@@ -4,6 +4,15 @@
     <title>Create Voucher</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <style>
+        .header-full-width .container {
+            max-width: none;
+        }
+
+        header {
+            position: relative;
+        }
+    </style>
 </head>
 <body class="bg-gray-200 flex items-center justify-center min-h-screen">
 <div class="bg-white shadow-md rounded-lg p-8 max-w-lg w-full">
