--- a/src/main/resources/templates/admin/Header.html
+++ b/src/main/resources/templates/admin/Header.html
@@ -9,7 +9,7 @@
         <div class="mx-auto flex justify-between items-center">
             <h1 class="text-xl font-semibold"><a href="/" class="hover:text-gray-300">Welcome to Youkoso Store</a></h1>
             <nav>
-                <a href="/" class="text-white px-3 py-2 rounded hover:bg-gray-700 hover:text-white">Home</a>
+                <a href="/products" class="text-white px-3 py-2 rounded hover:bg-gray-700 hover:text-white">Home</a>
                 <a href="/vouchers" class="text-white px-3 py-2 rounded hover:bg-gray-700 hover:text-white">Manage Voucher</a>
                 <button id="logoutButton">Logout</button>
                 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
