fix youkoso store

--- a/src/main/resources/templates/admin/Header.html
+++ b/src/main/resources/templates/admin/Header.html
@@ -7,7 +7,7 @@
 <div th:fragment="header">
     <header class="bg-gray-800 text-white p-4">
         <div class="mx-auto flex justify-between items-center">
-            <h1 class="text-xl font-semibold"><a href="/" class="hover:text-gray-300">Welcome to Youkoso Store</a></h1>
+            <h1 class="text-xl font-semibold"><a href="/products" class="hover:text-gray-300">Welcome to Youkoso Store</a></h1>
             <nav>
                 <a href="/products" class="text-white px-3 py-2 rounded hover:bg-gray-700 hover:text-white">Home</a>
                 <a href="/vouchers" class="text-white px-3 py-2 rounded hover:bg-gray-700 hover:text-white">Manage Voucher</a>
